# shadow-delivery

./: Cargo.toml  idea.md  index.html  postmortem.md  shadow-delivery.js  shadow-delivery.wasm
.github/workflows/: deploy.yml
assets/: level.json
assets/shaders/: background.glsl  building.glsl  global_light.glsl  health.glsl  normal_map.glsl  normal_texture.glsl  point_light_shadow_map.glsl  spotlight.glsl  texture.glsl  visibility.glsl
src/: assets.rs  main.rs  util.rs
src/editor/: mod.rs  render.rs
src/game/: mod.rs  ui.rs
src/model/: angle.rs  collider.rs  geometry.rs  level.rs  lights.rs  mod.rs  world.rs
src/model/logic/: mod.rs
src/render/: cache.rs  editor.rs  game.rs  lights.rs  mod.rs  player.rs  util.rs  world.rs
src/ui/: slider.rs
