[package]
name = "shadow-delivery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecs = { git = "https://github.com/geng-engine/ecs", version = "0.1.0" }
geng = { git = "https://github.com/geng-engine/geng", version = "0.14.0" }
