[package]
name = "shadow-delivery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
ecs = { git = "https://github.com/geng-engine/ecs", version = "0.1.0" }
geng = { git = "https://github.com/geng-engine/geng", version = "0.14.0" }
parry2d = "0.13.4"
serde = { version = "1.0.160", features = ["derive"] }
